--- a/src/app/pages/privacy-policy/privacy-policy.component.html
+++ b/src/app/pages/privacy-policy/privacy-policy.component.html
@@ -159,7 +159,7 @@
                 </h2>
                 <p class="leading-relaxed">
                     Si tienes preguntas sobre esta política, puedes contactarnos en: <a
-                        href="mailto:legal@dev-sharks.com"
+                        href="mailto:legal@devhubsharks.com"
                         class="text-lime-400 hover:underline">legal@devhubsharks.com</a>
                 </p>
             </section>
