--- a/src/app/pages/terms-conditions/terms-conditions.component.html
+++ b/src/app/pages/terms-conditions/terms-conditions.component.html
@@ -19,7 +19,8 @@
                     Aceptación de los Términos
                 </h2>
                 <p class="leading-relaxed">
-                    Al acceder y utilizar la plataforma Dev-Sharks, aceptas cumplir y estar sujeto a estos Términos y
+                    Al acceder y utilizar la plataforma Dev Hub Sharks, aceptas cumplir y estar sujeto a estos Términos
+                    y
                     Condiciones. Si no estás de acuerdo con alguna parte de estos términos, no podrás utilizar nuestros
                     servicios.
                 </p>
